[project]
name = "imgtag"
version = "0.1.8"
description = "图像标签与向量搜索系统 - 支持OpenAI标准视觉模型和嵌入模型"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ImgTag Team" }
]

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    # 数据库 (SQLAlchemy 2.0 + 异步)
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "alembic>=1.17.2",
    "psycopg[binary,pool]>=3.2.0", # Legacy: 迁移完成后移除
    # HTTP 客户端
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    # 数据验证
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # 工具
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "numpy>=2.2.0",
    # 认证
    "pyjwt>=2.10.1",
    # S3 存储
    "boto3>=1.35.0",
    "cryptography>=46.0.3",
]

[project.optional-dependencies]
# 本地嵌入模型 (可选，ONNX 版本，约 200MB)
local = [
    "onnxruntime>=1.16.0",
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
imgtag = "imgtag.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imgtag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
